<resources>
    <string name="app_name">BMI_calculator</string>
    <string name="height">Height</string>
    <string name="zero">0.0</string>
    <string name="cm">cm</string>
    <string name="weight">Weight</string>
    <string name="kg">kg</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="your_result">Your result:</string>
    <string name="incorrect">Incorrect!</string>
    <string name="enter_weight">Enter weight</string>
    <string name="enter_height">Enter height</string>
    <string name="return_text">Return</string>
    <string name="metric">Metric</string>
    <string name="history">History</string>
    <string name="pounds">pounds</string>
    <string name="kg_and_cm">kg and cm</string>
    <string name="lb_and_ft">lb and ft</string>
    <string name="lb">lb</string>
    <string name="ft">ft</string>
    <string name="about_me">About me</string>
    <string name="malgorzata_sielska">MALGORZATA SIELSKA</string>
    <string name="about_me_text">Student of Applied Computer Science at the University of Science and Technology in Wroclaw. Currently working at Procter and Gamble as AI Engineering Trainee.</string>
    <string name="picture_desc">here is my picture</string>
    <string name="spin">SPIN</string>
    <string name="facts_about_me">Facts about me</string>
    <string name="instructions">To calculate your BMI please enter values below</string>
    <string name="main_title">Main title</string>
</resources>